--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+# [Make a Combined Library and Binary Project in Rust](https://dev.to/yjdoc2/make-a-combined-library-and-binary-project-in-rust-d4f)
+
 [package]
 name = "reservoir_sampling"
 version = "0.1.0"
